# uwd

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
examples/: Cargo.toml
examples/1. winexec/: Cargo.toml
examples/1. winexec/src/: main.rs
examples/2. syscall/: Cargo.toml  main.rs
examples/2. syscall/src/: main.rs
examples/3. shellcode/: Cargo.toml
examples/3. shellcode/src/: main.rs
examples/shellcode/: main.rs
examples/syscall/: main.rs
examples/winexec/: main.rs
src/: data.rs  error.rs  lib.rs  types.rs  util.rs  utils.rs  uwd.rs
src/asm/gnu/: desync.asm  synthetic.asm
src/asm/msvc/: desync.asm  synthetic.asm
tests/: Cargo.toml
tests/src/: main.rs
