[package]
name = "uwd"
version = "0.2.4"
edition = "2024"
description = "Call Stack Spoofing for Rust"
license = "MIT"
repository = "https://github.com/joaoviictorti/uwd"
homepage = "https://github.com/joaoviictorti/uwd"
readme = "README.md"
build = "build.rs"
keywords = ["spoofing", "stack", "windows", "rust", "redteam"]
categories = ["os", "security"]
exclude = [
    ".gitignore",
    "target/",
    "tests/",
]

[dependencies]
bitfield = "0.19.0"
obfstr = "0.4.4"
dinvk = "0.2.4"
anyhow = { version = "1.0.98", default-features = false }
memchr = { version = "2.7.4", default-features = false }

[build-dependencies]
cc = "1.2.19"
nasm-rs = "0.3.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
]

[[example]]
name = "winexec"
path = "examples/1. winexec/main.rs"

[[example]]
name = "syscall"
path = "examples/2. syscall/main.rs"

[[example]]
name = "shellcode"
path = "examples/3. shellcode/main.rs"
